# xss-lock

./: CMakeLists.txt  LICENSE  NEWS  x_event_source.c  xcb_util.c  xcb_util.h  xlocklaunch.c  xss-lock.c
completion/: CMakeLists.txt  xss-lock.bash  xss-lock.zsh
doc/: CMakeLists.txt  dim-screen.sh  transfer-sleep-lock-generic-delay.sh  transfer-sleep-lock-i3lock.sh  xdg-screensaver.patch  xss-lock.1.rst  xss-lock.1.rst.in  xss-lock.service
src/: CMakeLists.txt  config.h.in  logind_manager.xml  logind_session.xml  x_event_source.c  x_event_source.h  xcb_utils.c  xcb_utils.h  xlocklaunch.c  xss-lock.c
